# krill

./: .gitignore  .readthedocs.yaml  .travis.yaml  .travis.yml  ;q  CONTRIBUTING.md  Cargo.toml  Changelog.md  Dockerfile  README.md  TODO.md  build-dist.sh  build.rs  cypress.json
.github/workflows/: audit.yml  ci-tmp.yml  ci.yml  coverage.yml  dummy-delete-me.yml  e2e test cache rebuild.yml  e2e.yml  main.yml  pkg-docker.yml  pkg.yml  rust.yml
.rpm/: krill.spec
ca/: Cargo.toml  README.md
ca/src/: ca.rs  caserver.rs  common.rs  lib.rs  objects.rs  publishing.rs  repo_info.rs  resource_class.rs  resources.rs  signing.rs  trustanchor.rs
ca/test-resources/: delta-1.json
client/: Cargo.toml  README.md
client/src/: client.rs  lib.rs  options.rs  report.rs
cms_proxy/: Cargo.toml  README.md
cms_proxy/src/: api.rs  builder.rs  clients.rs  fromreq.rs  id.rs  lib.rs  proxy.rs  responder.rs  rfc6492.rs  rfc8181.rs  rfc8183.rs  sigmsg.rs
cms_proxy/test/provisioning/: list.xml
cms_proxy/test/remote/: carol_child_id.xml  rpkid-parent-response-offer.xml  rpkid-parent-response.xml  rpkid-rfc6492-list.der
commons/: Cargo.toml  README.md
commons/src/: lib.rs
commons/src/api/: admin.rs  ca.rs  mod.rs  provisioning.rs  publication.rs  roas.rs  rrdp.rs
commons/src/eventsourcing/: agg.rs  agg_store.rs  cmd.rs  es_example.rs  evt.rs  listener.rs  mod.rs  store.rs
commons/src/remote/: api.rs  builder.rs  clients.rs  id.rs  mod.rs  proxy.rs  responder.rs  rfc6492.rs  rfc8181.rs  rfc8183.rs  sigmsg.rs
commons/src/util/: actix.rs  ext_serde.rs  file.rs  httpclient.rs  mod.rs  softsigner.rs  test.rs  xml.rs
commons/test-resources/: test.tal
commons/test-resources/publication/: report_error_complex.xml  success.xml
commons/test-resources/remote/: apnic-list-response.der  cms_ta.cer  lacnic-res-2.der  lacnic-res.der  rpkid-rfc6492-issue_response.der
daemon/: Cargo.toml  README.md  build-dist.sh  build-ui.rs
daemon/defaults/: krill.conf
daemon/src/: auth.rs  config.rs  endpoints.rs  krillserver.rs  lib.rs  mq.rs  republisher.rs  scheduler.rs  test.rs
daemon/src/ca/: ca.rs  caserver.rs  certauth.rs  child.rs  commands.rs  error.rs  events.rs  keys.rs  mod.rs  publishing.rs  rc.rs  routes.rs  server.rs  signing.rs
daemon/src/http/: mod.rs  server.rs  ssl.rs  statics.rs
daemon/tests/: admin_publishers.rs  ca_keyroll_under_rfc6492_ta.rs  ca_roas.rs  ca_under_embedded_ta.rs  ca_under_rfc6492_ta.rs  ca_under_ta.rs  client_publish.rs  embedded_trust_anchor.rs  grand_children.rs  health_check.rs
daemon/ui/: README.md  package.json  vue.config.js
daemon/ui/dev/html/: login.html
daemon/ui/public/: index.html
daemon/ui/src/: App.vue  auth-header.js  element-variables.scss  main.js  router.js
daemon/ui/src/locales/: en.json  it.json
daemon/ui/src/services/: APIService.js
daemon/ui/src/views/: Home.vue  Login.vue  PublisherDetails.vue  Publishers.vue  TrustAnchor.vue
debian/: krill-debian-buster.krill.service  krill-debian-stretch.krill.service  krill-ubuntu-bionic.krill.service  krill-ubuntu1604.krill.service  krill-ubuntu1804.krill.service  krill-ubuntu2004.krill.service  krill.service.preset  postinst  postrm
debian/assets/: krill.service.preset  krill.service.ubuntu1604  krill.service.ubuntu1804  krill.service.ubuntu2004
debian/scripts/: postinst  postrm  prerm
defaults/: abac.polar  aliases.polar  client.toml  krill-hsm.conf  krill-multi-user.conf  krill-pkcs11.conf  krill-pubd.conf  krill-testbed.conf  krill.conf  pubserver.conf  rbac.polar  roles.polar  rules.polar  server.toml
doc/: build-man.sh  krill.1  krill.1.bz2  krill.1.xz  krill.5  krill.conf.5  krill.conf.5.bz2  krill.conf.5.xz  krillc.1  krillc.1.bz2  krillc.1.xz  krillta.1  krillta.1.bz2  krillta.1.xz  krillup.1  krillup.1.bz2  krillup.1.xz  openapi-pubd.yaml  openapi-redoc-demo.html  openapi.yaml
doc/development/: 00_readme.md  01_daemon.md  02_cli.md  03_es_concepts.md  04_es_krill.md  05_repo_manager.md  06_ca_manager.md  readme.md
doc/manual/: Makefile  README.md  build-man.sh
doc/policies/: role-per-ca-demo.polar  team-based-access-control.conf  team-based-access-control.polar  team-based-access-demo.polar
docker/: entrypoint.sh  krill.conf
examples/: openid_connect_mock.rs
krilltest/: Cargo.toml  TODO.md
krilltest/src/: lib.rs  main.rs
krilltest/src/environment/: core.rs  krill.rs  mod.rs  nginx.rs  routinator.rs
krilltest/src/utils/: fmt.rs  mod.rs
lagosta/: index.html
lagosta/css/: app.css
lagosta/js/: app.js
local/lagosta/: index.html
pkg/common/: krill-debian-bookworm.krill.service  krill-debian-buster-arm-unknown-linux-gnueabihf.krill.service  (+3 more)
pkg/debian/: postinst  (+4 more)
pubc/: Cargo.toml  README.md
pubc/src/: apiclient.rs  cmsclient.rs  lib.rs
pubd/: Cargo.toml  README.md
pubd/src/: lib.rs  publishers.rs  pubserver.rs  repo.rs
src/: bgp.rs  config.rs  constants.rs  ext_serde.rs  file.rs  lib.rs  main.rs  oob.rs  out_of_band.rs  server.rs  test.rs  xml_support.rs
test/: publisher_request.xml
test-resources/: krill-init-multi-user.conf  krill-init.conf  krillta.conf  multi-user-master-token.conf  test.tal
tests/: admin_publishers.rs  auth_check.rs  benchmark.rs  ca_embedded.rs  ca_grandchildren.rs  ca_keyroll_rfc6492.rs  ca_keyroll_under_rfc6492_ta.rs  ca_rfc6492.rs  ca_roas.rs  ca_under_embedded_ta.rs  ca_under_rfc6492_ta.rs  client_api_publish_at_server.rs  client_cms_publish_at_server.rs  client_coverage.rs  client_publish.rs  client_publish_at_server.rs  common.rs  functional.rs  functional_aspa.rs  functional_bgpsec.rs  functional_ca_import.rs  functional_delegated_ca_import.rs  functional_grandchild_resources.rs  functional_keyroll.rs  functional_old_data.rs  functional_parent_child.rs  functional_roas.rs  functional_rtas.rs  functional_ta.rs  grand_children.rs  health_check.rs  history.rs  integration_test.rs  long_benchmark.rs  manage_publishers.rs  migrate_repository.rs  multi-user-master-token.rs  multi_user_admin_token.rs  multi_user_config_file.rs  multi_user_config_file_with_ta.rs  (+17 more)
ui/: index.html  package.json  vue.config.js
(+4362 files in other folders)
