[package]
name    = "krill_ca"
version = "0.2.0"
authors = ["Tim Bruijnzeels <tim@nlnetlabs.nl>", "Martin Hoffmann <martin@nlnetlabs.nl>"]

[dependencies]
derive_more     = "^0.13"
hex             = "^0.3"
rpki            = "^0.3"
serde           = { version = "^1.0", features = ["rc"] }
serde_derive    = "^1.0"
serde_json      = "^1.0"

[dependencies.krill_commons]
path = "../commons"
version = "0.2.0"