[package]
name    = "krill_ca"
version = "0.2.0"
authors = ["Tim Bruijnzeels <tim@nlnetlabs.nl>", "Martin Hoffmann <martin@nlnetlabs.nl>"]

[dependencies]
bcder           = "^0.3"
base64          = "^0.10"
bytes           = "^0.4"
chrono          = "^0.4"
derive_more     = "^0.13"
hex             = "^0.3"
rand            = "^0.6"
rpki            = "^0.5"
serde           = { version = "^1.0", features = ["derive" ] }
serde_json      = "^1.0"

# Logging
fern            = "^0.5"
log             = "^0.4"

[dependencies.krill_commons]
path = "../commons"
version = "0.2.0"

[features]
default = []
extra-debug = [ "rpki/extra-debug" ]