[package]
name    = "krill_client"
version = "0.1.0"
authors = ["Tim Bruijnzeels <tim@nlnetlabs.nl>", "Martin Hoffmann <martin@nlnetlabs.nl>"]

[dependencies]
clap            = "^2.32"
derive_more     = "^0.13"
rpki            = "^0.6"
serde           = "^1.0"
serde_json      = "^1.0"

[dependencies.krill_commons]
path = "../commons"
version = "0.1.0"
